# agentshim

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml
agentshim/: __init__.py  base.py  claude.py  claude_events.py  cli_agent.py  codex.py  codex_events.py  copilot_events.py  events.py  executor.py  gemini.py  gemini_events.py  llm_client.py  mcp_config.py  opencode.py  opencode_events.py  sandbox.py  subagent.py  trajectory.py  usage.py  utils.py
agentshim/claude/: __init__.py  agent.py  events.py
agentshim/codex/: __init__.py  agent.py  events.py
agentshim/copilot/: __init__.py  agent.py  events.py
agentshim/gemini/: __init__.py  agent.py  events.py
agentshim/hooks/: confine_reads.py
agentshim/opencode/: __init__.py  agent.py  events.py
docs/: api.md  development.md  events.md  executors.md  extending.md  getting-started.md  index.md  mcp.md  providers.md
scripts/: check_errors.sh  format_code.sh  type_check.sh
tests/fixtures/copilot/: session_turn_1.jsonl  session_turn_2_resumed.jsonl  streaming_dedup.jsonl  tool_and_usage.jsonl
tests/unit/: test_agent_cli_claude.py  test_agent_cli_codex.py  test_agent_cli_copilot.py  test_agent_cli_copilot_fixtures.py  test_agent_cli_event_parsing.py  test_agent_cli_mcp_unsupported.py  test_agent_cli_resume.py  test_agent_cli_sandbox.py  test_cli_agent_usage.py  test_coding_agent_facade.py  test_coding_agent_recorder_default.py  test_event_handlers.py  test_mcp_config.py
tests/unit/cli_agent/: test_agent_cli_cleanup.py  test_check_cli.py  test_cli_prompt_passing.py  test_command_executor.py
tests/unit/llm/: conftest.py  test_claude_stream.py  test_gemini_fixture.py  test_gemini_stream.py
