[project]
name = "agentshim"
version = "0.5.0"
description = "Provider-agnostic coding-agent CLI shims"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentshim"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PIE", "C4", "ERA", "B", "RUF010", "RUF013", "RUF100", "PT", "SIM", "RSE", "FURB", "A", "PERF401", "RET505", "TCH", "S602"]
ignore = ["SIM117", "SIM105", "SIM108", "PT009"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
